--- a/group_chat.html
+++ b/group_chat.html
@@ -114,7 +114,7 @@
                                 <ul id="myTab" class="nav nav-tabs">
                                     <li class="active"><a href="#home" data-toggle="tab">Group <button type="button" class="btn btn-default btn-xs"><i class="fa fa-sign-out"></i></button></a>
                                     </li>
-                                    <li><a href="#profile" data-toggle="tab">To-do List<span class="badge badge-green">1</span></a>
+                                    <li><a href="#profile" data-toggle="tab">To-do list&nbsp;<span class="badge badge-red">1</span></a>
                                     </li>
                                     <li><a href="#myTasks" data-toggle="tab">My Tasks</a>
                                     </li>
@@ -471,7 +471,7 @@
 
                 var element = "";
                 element += "<li class='in'>";
-                element += "<img class='avatar' src='https://s3.amazonaws.com/uifaces/faces/twitter/kolage/48.jpg'>";
+                element += "<img class='avatar' src='./images/User2.png'>";
                 element += "<div class='message'>";
                 element += "<span class='chat-arrow'></span>";
                 element += "<a class='chat-name' href='#'>Admin &nbsp;</a>";
@@ -592,6 +592,7 @@
             }else{
                 $(this).addClass('voted');
                 $(this).prev().addClass('voted');
+
                 $(this).parent().parent().css('background-color','#aaaaaa');
                 var $now = parseInt($(this).find("span").text());
                 $now = $now + 1;
