--- a/grouplist_care.html
+++ b/grouplist_care.html
@@ -102,8 +102,16 @@
         <!--BEGIN PAGE WRAPPER-->
         <div id="page-wrapper">
             <!--BEGIN CONTENT-->
-            <div class="page-content" style="padding-top:80px;">
+            <div class="page-content" style="padding-top:60px;">
                 <div class="group-list">
+
+                    <div class="row">
+                        <div class="col-xs-offset-5">
+                          <img src="images/plus.png" style="width: 50px; height: 50px;" class="media-object"/>
+                        </div>
+                    </div>
+                    <br>
+
                     <div class="panel">
                         <div class="panel-body">
                             <div class="row">
