new owner group list

--- a/group_chat.html
+++ b/group_chat.html
@@ -470,8 +470,8 @@
                 $obj.val(""); // CLEAR TEXT ON TEXTAREA
 
                 var element = "";
-                element += "<li class='in'>";
-                element += "<img class='avatar' src='./images/User2.png'>";
+                element += "<li class='out'>";
+                element += "<img class='avatar' src='./images/User1.png'>";
                 element += "<div class='message'>";
                 element += "<span class='chat-arrow'></span>";
                 element += "<a class='chat-name' href='#'>Admin &nbsp;</a>";
