--- a/grouplist_owner.html
+++ b/grouplist_owner.html
@@ -106,7 +106,7 @@
                             <div class="row">
                                 <div class="col-xs-4"><img src="./images/group01.png" style="width: 70px; height: 70px;" class="media-object"></div>
                                 <div class="group-info col-xs-8">
-                                    Group Apple <button type="button" class="btn btn-info btn-xs btn-to-right apply-btn-out">Apply </button>
+                                    Group Apple <button type="button" class="btn btn-info btn-xs btn-to-right apply-btn-out">Accept </button>
                                     <p><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-half-o"></i></p>
                                     <p>We have been taking care of: bulldog, golden retriever</p>
                                 </div>
@@ -119,7 +119,7 @@
                             <div class="row">
                                 <div class="col-xs-4"><img src="./images/group02.png" style="width: 70px; height: 70px;" class="media-object"></div>
                                 <div class="group-info col-xs-8">
-                                    Group Banana <button type="button" class="btn btn-info btn-xs btn-to-right apply-btn-out">Apply </button>
+                                    Group Banana <button type="button" class="btn btn-info btn-xs btn-to-right apply-btn-out">Accept </button>
                                     <p><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-half-o"></i></p>
                                     <p>We have been taking care of: bulldog, golden retriever</p>
                                 </div>
@@ -132,7 +132,7 @@
                             <div class="row">
                                 <div class="col-xs-4"><img src="./images/group03.png" style="width: 70px; height: 70px;" class="media-object"></div>
                                 <div class="group-info col-xs-8">
-                                    Group Cherry <button type="button" class="btn btn-info btn-xs btn-to-right apply-btn-out">Apply </button>
+                                    Group Cherry <button type="button" class="btn btn-info btn-xs btn-to-right apply-btn-out">Accept </button>
                                     <p><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-half-o"></i></p>
                                     <p>We have been taking care of: bulldog, golden retriever</p>
                                 </div>
@@ -144,7 +144,7 @@
                             <div class="row">
                                 <div class="col-xs-4"><img src="./images/group04.png" style="width: 70px; height: 70px;" class="media-object"></div>
                                 <div class="group-info col-xs-8">
-                                    Group Date <button type="button" class="btn btn-info btn-xs btn-to-right apply-btn-out">Apply </button>
+                                    Group Date <button type="button" class="btn btn-info btn-xs btn-to-right apply-btn-out">Accept </button>
                                     <p><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-half-o"></i></p>
                                     <p>We have been taking care of: bulldog, golden retriever</p>
                                 </div>
@@ -157,7 +157,7 @@
                             <div class="row">
                                 <div class="col-xs-4"><img src="./images/group05.png" style="width: 70px; height: 70px;" class="media-object"></div>
                                 <div class="group-info col-xs-8">
-                                    Group Elderberry <button type="button" class="btn btn-info btn-xs btn-to-right apply-btn-out">Apply </button>
+                                    Group Elderberry <button type="button" class="btn btn-info btn-xs btn-to-right apply-btn-out">Accept </button>
                                     <p><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-half-o"></i></p>
                                     <p>We have been taking care of: bulldog, golden retriever</p>
                                 </div>
@@ -223,7 +223,7 @@
                         </tr>
                         </tbody>
                     </table>
-                    <a role="button" class="btn btn-info apply-btn">Apply</a>
+                    <a role="button" class="btn btn-info apply-btn">Accept</a>
                     <a role="button" class="btn btn-info collect-btn">Collect</a>
                     <a role="button" class="btn btn-info back-btn">Back</a>
                 </div>
@@ -279,7 +279,7 @@
         $(".apply-btn").click(function(){
             $(this).removeClass("btn-info");
             $(this).addClass("btn-default");
-            $(this).html("Applied");
+            $(this).html("Accepted");
 
         });
         $(".collect-btn").click(function(){
@@ -290,7 +290,7 @@
         $(".apply-btn-out").click(function(e){
             $(this).removeClass("btn-info");
             $(this).addClass("btn-default");
-            $(this).html("Applied");
+            $(this).html("Accepted");
 
             e.stopPropagation();
         });
