--- a/owner_profile.html
+++ b/owner_profile.html
@@ -17,12 +17,17 @@
             background-size: cover;
             background-repeat: no-repeat;
         }
+
     </style>
 
 </head>
 <body>
-        <div id="addtask" style="width:310px;height:93px;margin-top:120px;margin-left:24px;"></div>
-        <div id="review" style="width:310px;height:93px;margin-top:114px;margin-left:24px;"></div>
+        <div id="addtask" style="width:330px;height:100px;margin-top:120px;margin-left:24px;"></div>
+
+        <div id="applied" style="width:330px;height:93px;margin-top:20px;margin-left:24px;"></div>
+        <div id="review" style="width:330px;height:93px;margin-top:20px;margin-left:24px;"></div>
+
+        <div id="me" style="width:108px;height:30px;margin-top:170px;margin-left:130px;"></div>
 </body>
 <script src="js/jquery-1.10.2.min.js"></script>
 <script src="js/jquery-migrate-1.2.1.min.js"></script>
@@ -34,6 +39,12 @@
         });
         $("div#review").click(function(){
             window.location.href = "job_review.html";
+        });
+        $("div#me").click(function(){
+            window.location.href = "owner_group_chat.html";
+        });
+        $("div#applied").click(function(){
+            window.location.href = "applied_job.html";
         });
     });
 
