--- a/group_chat.html
+++ b/group_chat.html
@@ -511,7 +511,7 @@
 
             var element = "";
             element += "<li class='out'>";
-            element += "<img class='avatar' src='https://s3.amazonaws.com/uifaces/faces/twitter/kolage/48.jpg'>";
+            element += "<img class='avatar' src='./images/User1.png'>";
             element += "<div class='message'>";
             element += "<span class='chat-arrow'></span>";
             element += "<a class='chat-name' href='#'>Admin &nbsp;</a>";
