--- a/grouplist_owner.html
+++ b/grouplist_owner.html
@@ -49,18 +49,18 @@
                     <a data-hover="dropdown" href="#" class="dropdown-toggle"><img src="./images/User3.png" alt="" class="img-responsive img-circle" />&nbsp;<span class="hidden-xs">John Doe</span>&nbsp;<span class="caret"></span>
                     </a>
                     <ul class="dropdown-menu dropdown-user pull-right">
-                        <li><a href="extra-profile.html"><i class="fa fa-user"></i>My Profile</a>
+                        <li><a href="myprofile.html"><i class="fa fa-user"></i>My Profile</a>
                         </li>
-                        <li><a href="page-calendar.html"><i class="fa fa-calendar"></i>My Calendar</a>
+                        <li><a href="#"><i class="fa fa-calendar"></i>My Calendar</a>
                         </li>
-                        <li><a href="email-inbox.html"><i class="fa fa-envelope"></i>My Inbox<span class="badge badge-danger">3</span></a>
+                        <li><a href="#"><i class="fa fa-envelope"></i>My Inbox<span class="badge badge-danger">3</span></a>
                         </li>
                         <li><a href="#"><i class="fa fa-tasks"></i>My Tasks<span class="badge badge-success">7</span></a>
                         </li>
                         <li class="divider"></li>
-                        <li><a href="extra-lock-screen.html"><i class="fa fa-lock"></i>Lock Screen</a>
+                        <li><a href="#"><i class="fa fa-lock"></i>Lock Screen</a>
                         </li>
-                        <li><a href="extra-signin.html"><i class="fa fa-key"></i>Log Out</a>
+                        <li><a href="#"><i class="fa fa-key"></i>Log Out</a>
                         </li>
                     </ul>
                 </li>
@@ -233,7 +233,7 @@
             <!--END CONTENT-->
         </div>
         <footer>
-            <div class="btn-group btn-group-justified"><a href="#" role="button" class="btn btn-info active">Job</a><a href="group_chat.html" role="button" class="btn btn-success">Me</a><a role="button" class="btn btn-default">Contact</a>
+            <div class="btn-group btn-group-justified"><a href="#" role="button" class="btn btn-info active">Job</a><a href="owner_group_chat.html" role="button" class="btn btn-success">Me</a><a role="button" class="btn btn-default">Contact</a>
             </div>
         </footer>
         <!--END FOOTER-->
