--- a/joblist_care.html
+++ b/joblist_care.html
@@ -236,36 +236,9 @@
                             </div>
                         </div>
                     </div>
-                    <div class="panel">
-                        <div class="panel-body">
-                            <div class="row">
-                                <div class="task-info col-xs-6">
-                                    <h5>Task 3</h5>
-                                </div>
-
-                            </div>
-                            <div class="row">
-                                <div class="col-xs-12">
-                                    <p> Wash Jojo every week</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="panel">
-                        <div class="panel-body">
-                            <div class="row">
-                                <div class="task-info col-xs-6">
-                                    <h5>Task 4</h5>
-                                </div>
-
-                            </div>
-                            <div class="row">
-                                <div class="col-xs-12">
-                                    <p> Wash Jojo every week</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+                    <a type="button" class="btn btn-info" href="group_chat.html?x=1">Share</a>
+                    <a role="button" class="btn btn-info collect-btn">Collect</a>
+                    <a role="button" class="btn btn-info back-btn">Back</a>
                 </div>
 
 
@@ -315,6 +288,10 @@
             $(".job-detail").show();
             $(".job-list").hide();
         });
+        $(".back-btn").click(function(){
+            $(".job-detail").hide();
+            $(".job-list").show();
+        })
     });
 </script>
 
