--- a/group_chat.html
+++ b/group_chat.html
@@ -65,7 +65,7 @@
                             <li class="divider"></li>
                             <li><a href="#"><i class="fa fa-lock"></i>Lock Screen</a>
                             </li>
-                            <li><a href="#"><i class="fa fa-key"></i>Log Out</a>
+                            <li><a href="login_carer.html"><i class="fa fa-key"></i>Log Out</a>
                             </li>
                         </ul>
                     </li>
